--- a/www/templates/tab-homepage.html
+++ b/www/templates/tab-homepage.html
@@ -6,40 +6,22 @@
       <ion-item ng-repeat="item in items" class="item-icon-left item-button-right">
         <i class="icon {{item.icon}} {{item.status==0?'balanced':'assertive'}}"></i>
         <b class="{{item.status==0?'balanced':'assertive'}}">{{item.name}} <span style="float: right">{{item.hours}}:{{item.minutes}}:{{item.second}}</span></b>
-        <button class="button ion-stop button-clear button-assertive" ng-if="item.status==0" ng-click="stopItem(item.id)"></button>
-        <button class="button ion-play button-clear button-balanced"  ng-if="item.status!=0"></button>
+        <button class="button ion-stop button-clear button-assertive" ng-if="item.status==0"
+                ng-click="stopItem(item.id)"></button>
+        <button class="button ion-play button-clear button-balanced" ng-if="item.status!=0"></button>
       </ion-item>
     </ion-list>
 
     <!--事件标签-->
     <ion-item class="row row-wrap" style="border:none">
-      <button class="col" ng-repeat="tag in tags" ng-click=newItem(tag.name,tag.icon)><i class="icon {{tag.icon}}"></i>{{tag.name}}
+      <button class="button button-outline button-balanced button-small" style="margin: 2px;" ng-repeat="tag in tags"
+              ng-click=newItem(tag.name,tag.icon)>
+        <i class="icon {{tag.icon}}"></i> {{tag.name}}
       </button>
-      <button class="col" ng-click="newTag()"><i class="icon ion-ios-plus-outline"></i>新建</button>
+      <button class="button button-outline button-balanced button-small" style="margin: 2px;" ng-click="modal.show()">
+        <i class="icon ion-ios-plus-outline"></i> 新建
+      </button>
     </ion-item>
-
-    <style>
-
-      .col {
-        border: 1px solid black;
-        margin-top: 5px;
-        margin-left: 0px;
-        font-size: 15px;
-        width: 95%;
-        background-color: #11C1F3;
-        border-radius: 5px;
-      }
-
-      .lis {
-        list-style: none;
-        margin: auto;
-        font-size: 18px;
-        border: 1px solid;
-        width: 90%;
-        height: 30px;
-        margin-top: 3px;;
-      }
-    </style>
 
   </ion-content>
 </ion-view>
