--- a/www/templates/homepage-new.html
+++ b/www/templates/homepage-new.html
@@ -8,17 +8,17 @@
     <div class="list">
       <label class="item item-input">
         <span class="input-label">输入行为</span>
-        <input type="text" ng-model="newItem.name" value="ion-ionic">
+        <input type="text" ng-model="nitem.name">
       </label>
       <label class="item item-icon-right">
         <span>选择图标</span>
-        <i class="icon {{newItem.icon}}"></i>
+        <i class="icon {{nitem.icon}}"></i>
       </label>
     </div>
-    <button class="button button-full button-positive" ng-click="newTag(newItem)">创建</button>
+    <button class="button button-full button-positive" ng-click="newTag(nitem)">创建</button>
 
     <label class="row row-wrap">
-      <ion-radio ng-repeat="item in icons" ng-value="item" ng-model="newItem.icon" style="width: 50px;height: 50px;">
+      <ion-radio ng-repeat="item in icons" ng-value="item" ng-model="nitem.icon" style="width: 50px;height: 50px;">
         <i class="icon {{item}}"></i>
       </ion-radio>
     </label>
